move js into separate folder, separate classes
Code refactor - now JS is separated into few files for better code clarity

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 
 <body>
-    <script type="text/javascript" src="script.js">
+    <script type="text/javascript" src="src/elementToolsLib.js"></script>
+    <script type="text/javascript" src="src/VisitsSchedule.js">
+    </script>
+    <script type="text/javascript" src="src/script.js">
     </script>
 </body>
 
