fix month switch issue, add class to manage basic database

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <script type="text/javascript" src="src/dbManagement.js"></script>
     <script type="text/javascript" src="src/elementToolsLib.js"></script>
     <script type="text/javascript" src="src/VisitsSchedule.js">
     </script>
